--- a/styles/finance.css
+++ b/styles/finance.css
@@ -3,6 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root {
+  --primary: #de4a48;
+  --color2: #e36187;
+  --color3: #e9a7a9;
+  --color4: #edd1d0;
+}
 .header {
   display: flex;
   justify-content: space-between;
@@ -12,7 +18,7 @@
   font-size: 2.5rem;
   font-style: italic;
   background-color: #f5f5f5;
-  color: #9c27b0;
+  color: var(--primary);
   padding: 0.5rem 1rem;
 }
 
@@ -34,6 +40,7 @@
   padding: 0.5rem;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
+  color: var(--primary);
 }
 
 .nav .info {
@@ -41,6 +48,7 @@
   font-size: 0.85rem;
   font-family: "Roboto";
   font-style: italic;
+  color: var(--color3);
 }
 .nav .info div {
   margin: 0 0.25rem;
@@ -49,19 +57,136 @@
 .container {
   width: 80%;
   margin: auto;
-  border: 6px solid #9c27b0;
+  border: 6px solid var(--primary);
   display: flex;
   justify-content: space-around;
   border-radius: 2rem;
   padding: 1rem;
 }
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+#fundsForm{
+  display: flex;
+    gap: 1rem;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 1.25rem;
+}
+.form-group{
+    justify-content: space-between;
+    line-height: 1.5;
+    gap: 1rem;
+    color: var(--primary);
+    align-items: center;
+    align-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
 
+
+input[type="number"]{
+  outline: none;
+    border: 0.15rem solid var(--primary);
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    color: var(--color3);
+    letter-spacing: 2px;
+    font-size: 0.85rem;
+}
+input[type="number"]:focus{
+  box-shadow: 0 0 2px 2px var(--color3);
+}
+#accountNumber {
+  background-color: var(--primary);
+    color: white;
+    border: none;
+    outline: none;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+#accountNumber option {
+  background-color: var(--primary);
+  color: #f3f3f3;
+}
+#accountNumber:focus {
+  border: none;
+  box-shadow: 0 0 2px 2px var(--color3);
+}
+
+#accountNumber:hover {
+  border: none;
+  box-shadow: 0 0 2px 2px var(--color3);
+  background-color: white;
+  color: var(--color3);
+
+}
+
+
+
+button{
+  padding: 0.5rem;
+  background-color: var(--primary);
+  color: white;
+  outline: none;
+  border: none;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+button:hover, button:focus{
+  box-shadow: 0 0 2px 2px var(--color3);
+}
+
+@media only screen and (max-width: 430px) {
+  .header {
+    font-size: 2rem;
+  }
+  .nav{
+    width: 100%;
+  }
+  .info{
+    flex-direction: column;
+  }
+  .info .name, .info .email{
+    display: none;
+  }
+  .container{
+    width: 100%;
+    box-shadow: none;
+    border-radius: 0;
+    border: none;
+  }
+  #fundsForm{
+    font-size: 1rem;
+  }
+  .form-group{
+    line-height: 1;
+  }
+  input[type="number"]{
+    padding: 0.35rem 0.1rem;
+    font-size: 0.75rem;
+  }
+  .form-group{
+    gap: 0.25rem;
+  }
+  #accountNumber {
+    font-size: 0.75rem;
+    padding: 0.35rem 0.1rem;
+  }
+  
+}
 .entry {
   width: 40%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #9c27b0;
+  background-color: var(--primary);
   padding: 1rem;
   border-radius: 2rem;
   height: 20rem;
