--- a/styles/accounts.css
+++ b/styles/accounts.css
@@ -2,6 +2,12 @@
     margin: 0;padding: 0;
     box-sizing: border-box;
 }
+:root {
+    --primary: #de4a48;
+    --color2: #e36187;
+    --color3: #e9a7a9;
+    --color4: #edd1d0;
+  }
 .header {
     display: flex;
     justify-content: space-between;
@@ -11,7 +17,7 @@
     font-size: 2.5rem;
     font-style: italic;
     background-color: #f5f5f5;
-    color: #9c27b0;
+    color: var(--primary);
     padding: 0.5rem 1rem;
 }
 
@@ -33,6 +39,7 @@
     padding: 0.5rem;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
+    color: var(--primary);
 }
 
 
@@ -41,6 +48,7 @@
     font-size: .85rem;
     font-family: 'Roboto';
     font-style: italic;
+    color: var(--color3);
 }
 .nav .info div{
     margin: 0 0.25rem;
@@ -49,7 +57,7 @@
 .container{
     width: 80%;
     margin: auto;
-    border: 6px solid #9c27b0;
+    border: 6px solid var(--primary);
     display: flex;
     border-radius: 2rem;
     padding: 1rem;
@@ -72,22 +80,24 @@
 }
 
 #entryForm button{
-    border: 2px solid #9c27b0;
+    border: 2px solid var(--primary);
     width: 100%;
     padding: 0.5rem;
-    border-radius: 1.5rem;
-    background-color: #9c27b0;
+    border-radius: 0.5rem;
+    background-color: var(--primary);
     font-size: 1rem;
     letter-spacing: 0.15rem;
     text-transform: uppercase;
     font-weight: 600;
     color: white;
 }
-#entryForm button:hover{
+#entryForm button:hover, #entryForm button:focus{
     background-color: white;
-    border: 2px solid #9c27b0;
-    color: #9c27b0;
+    border: 2px solid var(--primary);
+    color: var(--primary);
     cursor: pointer;
+    outline: none;
+    box-shadow: 0 0 2px 2px var(--primary);
 }
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
@@ -95,13 +105,57 @@ input[type="number"]::-webkit-inner-spin-button {
     margin: 0;
 }
 input{
-    border: 2px solid grey;
+    border: 2px solid var(--primary);
     padding: 0.25rem 0.5rem;
     border-radius: 1.5rem;
     background-color: white;
     font-size: 1rem;
 }
 input:focus{
-    outline: 2px solid #9c27b0;
-    border: 2px solid #9c27b0;
+    outline: none;
+    box-shadow: 0 0 2px 2px var(--color3);
 }
+#accountNumber {
+    background-color: var(--primary);
+      color: white;
+      border: none;
+      outline: none;
+      padding: 0.5rem;
+      border-radius: 0.5rem;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: all 0.3s ease;
+  }
+  
+  #accountNumber option {
+    background-color: var(--primary);
+    color: #f3f3f3;
+  }
+  #accountNumber:focus {
+    border: none;
+    box-shadow: 0 0 2px 2px var(--color3);
+  }
+  
+  #accountNumber:hover {
+    border: none;
+    box-shadow: 0 0 2px 2px var(--color3);
+    background-color: white;
+    color: grey;
+  }
+  @media only screen and (max-width: 430px){
+    .info{
+        flex-direction: column;
+    }
+    #entryForm{
+        width: 100%;
+    }
+    .entry label{
+        display: none;
+    }
+    .entry input{
+        width: 100%;
+    }
+    #accountNumber{
+        width: 100%;
+    }
+  }
