--- a/styles/accounts.css
+++ b/styles/accounts.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-    font-family: "Merriweather", serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 900;
     font-size: 2.5rem;
     font-style: italic;
@@ -37,7 +37,7 @@
     width: 80%;
     margin: auto;
     padding: 0.5rem;
-    font-family: "Roboto", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 400;
     color: var(--primary);
 }
@@ -46,9 +46,12 @@
 .nav .info{
     display: flex;
     font-size: .85rem;
-    font-family: 'Roboto';
+    font-family: "Poppins", sans-serif;
     font-style: italic;
     color: var(--color3);
+}
+.nav .info .date{
+    font-family: "Merriweather", serif;
 }
 .nav .info div{
     margin: 0 0.25rem;
@@ -63,6 +66,7 @@
     padding: 1rem;
     flex-direction: column;
     align-items: center;
+    font-family: "Poppins", sans-serif;
 }
 
 #entryForm{
@@ -75,7 +79,7 @@
     align-items: baseline;
 }
 .entry label{
-    font-family: "Roboto", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 500;
 }
 
@@ -90,6 +94,7 @@
     text-transform: uppercase;
     font-weight: 600;
     color: white;
+    font-family: "Poppins", sans-serif;
 }
 #entryForm button:hover, #entryForm button:focus{
     background-color: white;
@@ -110,6 +115,7 @@ input{
     border-radius: 1.5rem;
     background-color: white;
     font-size: 1rem;
+    font-family: "Poppins", sans-serif;
 }
 input:focus{
     outline: none;
@@ -125,11 +131,13 @@ input:focus{
       font-size: 1rem;
       cursor: pointer;
       transition: all 0.3s ease;
+      font-family: "Merriweather", serif;
   }
-  
+
   #accountNumber option {
     background-color: var(--primary);
     color: #f3f3f3;
+    font-family: "Merriweather", serif;
   }
   #accountNumber:focus {
     border: none;
