--- a/styles/cfo.css
+++ b/styles/cfo.css
@@ -2,16 +2,22 @@
     margin: 0;padding: 0;
     box-sizing: border-box;
 }
+:root {
+    --primary: #de4a48;
+    --color2: #e36187;
+    --color3: #e9a7a9;
+    --color4: #edd1d0;
+  }
 .header {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-    font-family: "Merriweather", serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 900;
     font-size: 2.5rem;
     font-style: italic;
     background-color: #f5f5f5;
-    color: #9c27b0;
+    color: var(--primary);
     padding: 0.5rem 1rem;
 }
 
@@ -31,16 +37,18 @@
     width: 80%;
     margin: auto;
     padding: 0.5rem;
-    font-family: "Roboto", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 400;
+    color: var(--primary);
 }
 
 
 .nav .info{
     display: flex;
     font-size: .85rem;
-    font-family: "Roboto", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-style: italic;
+    color: var(--color3);
 }
 .nav .info div{
     margin: 0 0.25rem;
@@ -54,8 +62,10 @@
     margin: auto;
     justify-items: center;
     grid-gap: 1rem 0.5rem;
-    background-color: gray;
+    background-color: var(--color4);
+    color: var(--primary);
     border-radius: 0.5rem;
+    font-family: "Poppins", sans-serif;
 }
 
 .feilds .feild{
@@ -63,10 +73,11 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    font-family: "Poppins", sans-serif;
 }
 
 .feilds .feild .name{
-    font-family: "Roboto", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 600;
     font-style: normal;
     margin-bottom: 0.25rem;
@@ -87,11 +98,11 @@
 }
 
 .badge{
-    font-family: "Roboto", sans-serif;
+    font-family: "Merriweather", serif;
     font-weight: 400;
     font-style: normal;
     font-size: 0.75em;
-    background-color: #9c27b0;
+    background-color: var(--color2);
     border-radius: 0.25rem;
     padding: 0.35em 0.65em;
     margin-left: 0.25rem;
@@ -104,7 +115,7 @@
     row-gap: 1rem;
     padding: 1rem 2rem;
     width: 80%;
-    font-family: "Roboto", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 400;
     margin: auto;
 }
@@ -114,7 +125,9 @@
     justify-content: space-between;
     align-items: baseline;
 }
-
+.today #date{
+    font-family: "Merriweather", serif;
+}
 .entries .entry{
     display: flex;
     padding: 0.5rem 1rem;
@@ -143,3 +156,45 @@
     font-weight: 600;
     font-style: italic;
 }
+
+#accountNumber{
+    font-family: "Poppins", sans-serif;
+    border: none;
+    border: 0.25rem solid var(--primary);
+    padding: 0 0.25rem 0.25rem 0.25rem;
+    border-radius: 0.35rem;
+    background-color: var(--primary);
+    color: white;
+    outline: none;
+    cursor: pointer;
+}
+
+#accountNumber {
+    background-color: var(--primary);
+      color: white;
+      border: none;
+      outline: none;
+      padding: 0.25rem;
+      border-radius: 0.5rem;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      font-family: "Merriweather", serif;
+      font-style: italic;
+  }
+
+  #accountNumber option {
+    background-color: var(--primary);
+    color: #f3f3f3;
+    font-family: "Merriweather", serif;
+  }
+  #accountNumber:focus {
+    border: none;
+    box-shadow: 0 0 2px 2px var(--color3);
+  }
+  
+  #accountNumber:hover {
+    border: none;
+    box-shadow: 0 0 2px 2px var(--color3);
+    background-color: white;
+    color: grey;
+  }
