--- a/styles/finance.css
+++ b/styles/finance.css
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: space-between;
   align-items: baseline;
-  font-family: "Merriweather", serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 900;
   font-size: 2.5rem;
   font-style: italic;
@@ -38,7 +38,7 @@
   width: 80%;
   margin: auto;
   padding: 0.5rem;
-  font-family: "Roboto", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   color: var(--primary);
 }
@@ -46,7 +46,7 @@
 .nav .info {
   display: flex;
   font-size: 0.85rem;
-  font-family: "Roboto";
+  font-family: "Poppins", sans-serif;
   font-style: italic;
   color: var(--color3);
 }
@@ -74,6 +74,7 @@ input[type="number"]::-webkit-inner-spin-button {
     justify-content: center;
     flex-direction: column;
     font-size: 1.25rem;
+    font-family: "Poppins", sans-serif;
 }
 .form-group{
     justify-content: space-between;
@@ -86,7 +87,6 @@ input[type="number"]::-webkit-inner-spin-button {
     grid-template-columns: 1fr 1fr;
 }
 
-
 input[type="number"]{
   outline: none;
     border: 0.15rem solid var(--primary);
@@ -95,6 +95,7 @@ input[type="number"]{
     color: var(--color3);
     letter-spacing: 2px;
     font-size: 0.85rem;
+    font-family: "Merriweather", serif;
 }
 input[type="number"]:focus{
   box-shadow: 0 0 2px 2px var(--color3);
@@ -109,6 +110,7 @@ input[type="number"]:focus{
     font-size: 1rem;
     cursor: pointer;
     transition: all 0.3s ease;
+    font-family: "Poppins", sans-serif;
 }
 
 #accountNumber option {
@@ -128,8 +130,6 @@ input[type="number"]:focus{
 
 }
 
-
-
 button{
   padding: 0.5rem;
   background-color: var(--primary);
@@ -138,6 +138,7 @@ button{
   border: none;
   border-radius: 0.5rem;
   cursor: pointer;
+  font-family: "Poppins", sans-serif;
 }
 button:hover, button:focus{
   box-shadow: 0 0 2px 2px var(--color3);
@@ -179,203 +180,4 @@ button:hover, button:focus{
     font-size: 0.75rem;
     padding: 0.35rem 0.1rem;
   }
-  
-}
-.entry {
-  width: 40%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: var(--primary);
-  padding: 1rem;
-  border-radius: 2rem;
-  height: 20rem;
-  justify-content: space-evenly;
-}
-.entry .img {
-  width: 10rem;
-  height: 10rem;
-  background: white;
-  padding: 1rem;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 6px solid grey;
-}
-.received .img i {
-  color: #4caf50;
-}
-.sent .img i {
-  color: red;
-}
-.entry .img i {
-  font-size: 11rem;
-}
-.entry input,
-.entry button {
-  border: 2px solid grey;
-  width: 100%;
-  padding: 0.5rem;
-  border-radius: 1.5rem;
-  background-color: white;
-  font-size: 1rem;
-  letter-spacing: 0.15rem;
-  text-transform: uppercase;
-  font-weight: 600;
-}
-input[type="number"]::-webkit-outer-spin-button,
-input[type="number"]::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-.received input:focus {
-  outline: 2px solid #4caf50;
-  border: 2px solid #4caf50;
-}
-
-.sent input:focus {
-  outline: 2px solid red;
-  border: 2px solid red;
-}
-.received button {
-  background-color: #4caf50;
-  color: white;
-}
-.received button:hover {
-  color: #4caf50;
-  background-color: white;
-  border: 2px solid #4caf50;
-  cursor: pointer;
-}
-
-.sent button {
-  background-color: red;
-  color: white;
-}
-.sent button:hover {
-  color: red;
-  background-color: white;
-  border: 2px solid red;
-  cursor: pointer;
-}
-
-.roboto-thin {
-  font-family: "Roboto", sans-serif;
-  font-weight: 100;
-  font-style: normal;
-}
-
-.roboto-light {
-  font-family: "Roboto", sans-serif;
-  font-weight: 300;
-  font-style: normal;
-}
-
-.roboto-regular {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.roboto-medium {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-}
-
-.roboto-bold {
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.roboto-black {
-  font-family: "Roboto", sans-serif;
-  font-weight: 900;
-  font-style: normal;
-}
-
-.roboto-thin-italic {
-  font-family: "Roboto", sans-serif;
-  font-weight: 100;
-  font-style: italic;
-}
-
-.roboto-light-italic {
-  font-family: "Roboto", sans-serif;
-  font-weight: 300;
-  font-style: italic;
-}
-
-.roboto-regular-italic {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-style: italic;
-}
-
-.roboto-medium-italic {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-style: italic;
-}
-
-.roboto-bold-italic {
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
-  font-style: italic;
-}
-
-.roboto-black-italic {
-  font-family: "Roboto", sans-serif;
-  font-weight: 900;
-  font-style: italic;
-}
-
-.merriweather-light {
-  font-family: "Merriweather", serif;
-  font-weight: 300;
-  font-style: normal;
-}
-
-.merriweather-regular {
-  font-family: "Merriweather", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.merriweather-bold {
-  font-family: "Merriweather", serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.merriweather-black {
-  font-family: "Merriweather", serif;
-  font-weight: 900;
-  font-style: normal;
-}
-
-.merriweather-light-italic {
-  font-family: "Merriweather", serif;
-  font-weight: 300;
-  font-style: italic;
-}
-
-.merriweather-regular-italic {
-  font-family: "Merriweather", serif;
-  font-weight: 400;
-  font-style: italic;
-}
-
-.merriweather-bold-italic {
-  font-family: "Merriweather", serif;
-  font-weight: 700;
-  font-style: italic;
-}
-
-.merriweather-black-italic {
-  font-family: "Merriweather", serif;
-  font-weight: 900;
-  font-style: italic;
 }
