--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: space-between;
   align-items: baseline;
-  font-family: "Merriweather", serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 900;
   font-size: 2.5rem;
   font-style: italic;
@@ -36,6 +36,7 @@
   border-radius: 1rem;
   box-shadow: 0 0 4px 4px var(--color3);
   max-width: 960px;
+  font-family: "Poppins", sans-serif;
 }
 #loginForm {
   display: flex;
@@ -61,6 +62,7 @@
   text-align: center;
   font-size: 1.25rem;
   flex-grow: 1;
+  font-family: "Poppins", sans-serif;
 }
 .custom-radio:checked + .custom-label, .custom-label:hover {
   background-color: var(--primary);
@@ -79,6 +81,7 @@
   border-radius: 0.5rem;
   font-size: 1.25rem;
   flex-grow: 1;
+  font-family: "Poppins", sans-serif;
 }
 .inputs input:focus{
   outline: none;
@@ -93,6 +96,7 @@ button{
   border: none;
   border-radius: 0.5rem;
   cursor: pointer;
+  font-family: "Poppins", sans-serif;
 }
 button:hover{
   box-shadow: 0 0 2px 2px var(--color3);
