--- a/styles/accounts.css
+++ b/styles/accounts.css
@@ -1,169 +1,187 @@
-*{
-    margin: 0;padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 :root {
-    --primary: #de4a48;
-    --color2: #e36187;
-    --color3: #e9a7a9;
-    --color4: #edd1d0;
-  }
+  --primary: #de4a48;
+  --color2: #e36187;
+  --color3: #e9a7a9;
+  --color4: #edd1d0;
+}
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    font-family: "Poppins", sans-serif;
-    font-weight: 900;
-    font-size: 2.5rem;
-    font-style: italic;
-    background-color: #f5f5f5;
-    color: var(--primary);
-    padding: 0.5rem 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  font-family: "Poppins", sans-serif;
+  font-weight: 900;
+  font-size: 2.5rem;
+  font-style: italic;
+  background-color: #f5f5f5;
+  color: var(--primary);
+  padding: 0.5rem 1rem;
 }
 
-.header .logo{
-    width: 3rem;
-    overflow: hidden;
+.header .logo {
+  width: 3rem;
+  overflow: hidden;
 }
-.header .logo img{
-    object-fit: contain;
-    width: 100%;
-}
-
-.nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    width: 80%;
-    margin: auto;
-    padding: 0.5rem;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    color: var(--primary);
+.header .logo img {
+  object-fit: contain;
+  width: 100%;
 }
 
-
-.nav .info{
-    display: flex;
-    font-size: .85rem;
-    font-family: "Poppins", sans-serif;
-    font-style: italic;
-    color: var(--color3);
-}
-.nav .info .date{
-    font-family: "Merriweather", serif;
-}
-.nav .info div{
-    margin: 0 0.25rem;
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  width: 80%;
+  margin: auto;
+  padding: 0.5rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  color: var(--primary);
 }
 
-.container{
-    width: 80%;
-    margin: auto;
-    border: 6px solid var(--primary);
-    display: flex;
-    border-radius: 2rem;
-    padding: 1rem;
-    flex-direction: column;
-    align-items: center;
-    font-family: "Poppins", sans-serif;
+.nav .info {
+  display: flex;
+  font-size: 0.85rem;
+  font-family: "Poppins", sans-serif;
+  font-style: italic;
+  color: var(--color3);
+}
+.nav .info .date {
+  font-family: "Merriweather", serif;
+}
+.nav .info div {
+  margin: 0 0.25rem;
 }
 
-#entryForm{
-    width: 80%;
-}
-.entry{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 0.5rem;
-    align-items: baseline;
-}
-.entry label{
-    font-family: "Poppins", sans-serif;
-    font-weight: 500;
+.container {
+  width: 80%;
+  margin: auto;
+  border: 6px solid var(--primary);
+  display: flex;
+  border-radius: 2rem;
+  padding: 1rem;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
 }
 
-#entryForm button{
-    border: 2px solid var(--primary);
-    width: 100%;
-    padding: 0.5rem;
-    border-radius: 0.5rem;
-    background-color: var(--primary);
-    font-size: 1rem;
-    letter-spacing: 0.15rem;
-    text-transform: uppercase;
-    font-weight: 600;
-    color: white;
-    font-family: "Poppins", sans-serif;
+#entryForm {
+  width: 80%;
 }
-#entryForm button:hover, #entryForm button:focus{
-    background-color: white;
-    border: 2px solid var(--primary);
-    color: var(--primary);
-    cursor: pointer;
-    outline: none;
-    box-shadow: 0 0 2px 2px var(--primary);
+.entry {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0.5rem;
+  align-items: baseline;
+}
+.entry label {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+}
+
+#entryForm button {
+  border: 2px solid var(--primary);
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  background-color: var(--primary);
+  font-size: 1rem;
+  letter-spacing: 0.15rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: white;
+  font-family: "Poppins", sans-serif;
+}
+#entryForm button:hover,
+#entryForm button:focus {
+  background-color: white;
+  border: 2px solid var(--primary);
+  color: var(--primary);
+  cursor: pointer;
+  outline: none;
+  box-shadow: 0 0 2px 2px var(--primary);
 }
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
-input{
-    border: 2px solid var(--primary);
-    padding: 0.25rem 0.5rem;
-    border-radius: 1.5rem;
-    background-color: white;
-    font-size: 1rem;
-    font-family: "Poppins", sans-serif;
+input {
+  border: 2px solid var(--primary);
+  padding: 0.25rem 0.5rem;
+  border-radius: 1.5rem;
+  background-color: white;
+  font-size: 1rem;
+  font-family: "Poppins", sans-serif;
 }
-input:focus{
-    outline: none;
-    box-shadow: 0 0 2px 2px var(--color3);
+input:focus {
+  outline: none;
+  box-shadow: 0 0 2px 2px var(--color3);
 }
 #accountNumber {
-    background-color: var(--primary);
-      color: white;
-      border: none;
-      outline: none;
-      padding: 0.5rem;
-      border-radius: 0.5rem;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      font-family: "Merriweather", serif;
-  }
+  background-color: var(--primary);
+  color: white;
+  border: none;
+  outline: none;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-family: "Merriweather", serif;
+}
 
-  #accountNumber option {
-    background-color: var(--primary);
-    color: #f3f3f3;
-    font-family: "Merriweather", serif;
+#accountNumber option {
+  background-color: var(--primary);
+  color: #f3f3f3;
+  font-family: "Merriweather", serif;
+}
+#accountNumber:focus {
+  border: none;
+  box-shadow: 0 0 2px 2px var(--color3);
+}
+
+#accountNumber:hover {
+  border: none;
+  box-shadow: 0 0 2px 2px var(--color3);
+  background-color: white;
+  color: grey;
+}
+@media only screen and (max-width: 430px) {
+  .header {
+    font-size: 2rem;
   }
-  #accountNumber:focus {
+  .nav {
+    width: 100%;
+  }
+  .info {
+    flex-direction: column;
+  }
+  .info .name,
+  .info .email {
+    display: none;
+  }
+  .container {
+    width: 100%;
+    box-shadow: none;
+    border-radius: 0;
     border: none;
-    box-shadow: 0 0 2px 2px var(--color3);
   }
-  
-  #accountNumber:hover {
-    border: none;
-    box-shadow: 0 0 2px 2px var(--color3);
-    background-color: white;
-    color: grey;
+  #entryForm {
+    width: 100%;
+    font-size: 1rem;
   }
-  @media only screen and (max-width: 430px){
-    .info{
-        flex-direction: column;
-    }
-    #entryForm{
-        width: 100%;
-    }
-    .entry label{
-        display: none;
-    }
-    .entry input{
-        width: 100%;
-    }
-    #accountNumber{
-        width: 100%;
-    }
+  .entry label {
+    display: none;
   }
+  .entry input {
+    width: 100%;
+  }
+  #accountNumber {
+    width: 100%;
+  }
+}
