--- a/styles/cfo.css
+++ b/styles/cfo.css
@@ -42,14 +42,14 @@
     color: var(--primary);
 }
 
-
+/* 
 .nav .info{
     display: flex;
     font-size: .85rem;
     font-family: "Poppins", sans-serif;
     font-style: italic;
     color: var(--color3);
-}
+} */
 .nav .info div{
     margin: 0 0.25rem;
 }
@@ -73,7 +73,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    font-family: "Poppins", sans-serif;
+    text-align: center;
 }
 
 .feilds .feild .name{
@@ -94,7 +94,7 @@
     display: inline-flex;
     align-items: center;
     margin-left: 0.5rem;
-    
+
 }
 
 .badge{
@@ -171,15 +171,15 @@
 
 #accountNumber {
     background-color: var(--primary);
-      color: white;
-      border: none;
-      outline: none;
-      padding: 0.25rem;
-      border-radius: 0.5rem;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      font-family: "Merriweather", serif;
-      font-style: italic;
+    color: white;
+    border: none;
+    outline: none;
+    padding: 0.25rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    font-family: "Merriweather", serif;
+    font-style: italic;
   }
 
   #accountNumber option {
@@ -197,4 +197,67 @@
     box-shadow: 0 0 2px 2px var(--color3);
     background-color: white;
     color: grey;
+  }
+
+  @media only screen and (max-width: 430px) {
+    .header {
+      font-size: 2rem;
+    }
+    .nav {
+      width: 100%;
+      font-size: 0.85rem;
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+    .nav .info{
+        font-size: 0.75rem;
+    }
+    .feilds{
+        grid-template-columns: 1fr 1fr;
+        width: 90%;
+    }
+    .feilds .feild{
+        flex-direction:column;
+        text-align: center;
+        font-size: 0.75rem;
+    }
+
+    .today{
+        width: 100%;
+        padding: 1rem;
+        font-size: 0.85rem;
+    }
+    .today .entry {
+        padding: 0.5rem;
+    }
+    .today .entry .info{
+        width: 100%;
+        font-size: 0.75rem;
+    }
+    .today .entry .info .type{
+        font-size: 0.75rem;
+    }
+    .today .entry .user{
+        display: none;
+    }
+    .container {
+      width: 100%;
+      box-shadow: none;
+      border-radius: 0;
+      border: none;
+    }
+
+    #entryForm {
+      width: 100%;
+      font-size: 1rem;
+    }
+    .entry label {
+      display: none;
+    }
+    .entry input {
+      width: 100%;
+    }
+    #accountNumber {
+      width: 100%;
+    }
   }
