--- a/styles/accounts.css
+++ b/styles/accounts.css
@@ -151,6 +151,25 @@ input:focus {
   background-color: white;
   color: grey;
 }
+
+.custom-popup {
+  background-color: #f5f5f5;
+  border-radius: 1rem;
+}
+
+.custom-title {
+  color: var(--primary);
+  font-size: 1.5em;
+}
+
+.custom-confirm-button {
+  background-color: var(--primary) !important;
+  color: white;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 0.35rem 0.65rem;
+}
+
 @media only screen and (max-width: 430px) {
   .header {
     font-size: 2rem;
