--- a/styles/finance.css
+++ b/styles/finance.css
@@ -68,49 +68,49 @@ input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-#fundsForm{
+#fundsForm {
   display: flex;
-    gap: 1rem;
-    justify-content: center;
-    flex-direction: column;
-    font-size: 1.25rem;
-    font-family: "Poppins", sans-serif;
+  gap: 1rem;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 1.25rem;
+  font-family: "Poppins", sans-serif;
 }
-.form-group{
-    justify-content: space-between;
-    line-height: 1.5;
-    gap: 1rem;
-    color: var(--primary);
-    align-items: center;
-    align-content: center;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.form-group {
+  justify-content: space-between;
+  line-height: 1.5;
+  gap: 1rem;
+  color: var(--primary);
+  align-items: center;
+  align-content: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
-input[type="number"]{
+input[type="number"] {
   outline: none;
-    border: 0.15rem solid var(--primary);
-    border-radius: 0.5rem;
-    padding: 0.5rem;
-    color: var(--color3);
-    letter-spacing: 2px;
-    font-size: 0.85rem;
-    font-family: "Merriweather", serif;
+  border: 0.15rem solid var(--primary);
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  color: var(--color3);
+  letter-spacing: 2px;
+  font-size: 0.85rem;
+  font-family: "Merriweather", serif;
 }
-input[type="number"]:focus{
+input[type="number"]:focus {
   box-shadow: 0 0 2px 2px var(--color3);
 }
 #accountNumber {
   background-color: var(--primary);
-    color: white;
-    border: none;
-    outline: none;
-    padding: 0.5rem;
-    border-radius: 0.5rem;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    font-family: "Poppins", sans-serif;
+  color: white;
+  border: none;
+  outline: none;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-family: "Poppins", sans-serif;
 }
 
 #accountNumber option {
@@ -127,10 +127,9 @@ input[type="number"]:focus{
   box-shadow: 0 0 2px 2px var(--color3);
   background-color: white;
   color: var(--color3);
-
 }
 
-button{
+button {
   padding: 0.5rem;
   background-color: var(--primary);
   color: white;
@@ -140,40 +139,60 @@ button{
   cursor: pointer;
   font-family: "Poppins", sans-serif;
 }
-button:hover, button:focus{
+button:hover,
+button:focus {
   box-shadow: 0 0 2px 2px var(--color3);
+}
+
+.custom-popup {
+  background-color: #f5f5f5;
+  border-radius: 1rem;
+}
+
+.custom-title {
+  color: var(--primary);
+  font-size: 1.5em;
+}
+
+.custom-confirm-button {
+  background-color: var(--primary) !important;
+  color: white;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 0.35rem 0.65rem;
 }
 
 @media only screen and (max-width: 430px) {
   .header {
     font-size: 2rem;
   }
-  .nav{
+  .nav {
     width: 100%;
   }
-  .info{
+  .info {
     flex-direction: column;
   }
-  .info .name, .info .email{
+  .info .name,
+  .info .email {
     display: none;
   }
-  .container{
+  .container {
     width: 100%;
     box-shadow: none;
     border-radius: 0;
     border: none;
   }
-  #fundsForm{
+  #fundsForm {
     font-size: 1rem;
   }
-  .form-group{
+  .form-group {
     line-height: 1;
   }
-  input[type="number"]{
+  input[type="number"] {
     padding: 0.35rem 0.1rem;
     font-size: 0.75rem;
   }
-  .form-group{
+  .form-group {
     gap: 0.25rem;
   }
   #accountNumber {
