--- a/styles/style.css
+++ b/styles/style.css
@@ -102,7 +102,31 @@ button {
 button:hover {
   box-shadow: 0 0 2px 2px var(--color3);
 }
+.custom-popup {
+  background-color: #f5f5f5;
+  border-radius: 1rem;
+}
 
+.custom-title {
+  color: var(--primary);
+  font-size: 1.5em;
+}
+
+.custom-confirm-button {
+  background-color: var(--primary) !important;
+  color: white;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 0.35rem 0.65rem;
+}
+
+.custom-cancel-button {
+  background-color: white !important; 
+  color: var(--primary) !important;
+  border: none;
+  border-radius: 0.25rem;
+  padding: 0.35rem 0.65rem;
+}
 @media only screen and (max-width: 430px) {
   .container {
     width: 100%;
