--- a/styles/cfo.css
+++ b/styles/cfo.css
@@ -203,10 +203,52 @@
   position: fixed;
   right: 2rem;
   bottom: 1rem;
-  font-size: 2rem;
-  color: var(--primary);
+  font-size: 1rem;
+}
+#notification #header{
+  display: none;
+  justify-content: space-between;
+  font-size: 1.25rem;
+  font-style: italic;
+}
+#bell{
   cursor: pointer;
+  color: var(--primary);
+  font-size: 2rem;
+}
+#notification_badge{
+  position: fixed;
+  z-index: 1;
+  width: 0.7rem;
+  height: 0.7rem;
+  border-radius: 50%;
+  background-color: var(--color3);
+}
+.open {
   width: fit-content;
+  height: 300px;
+  background-color: #f5f5f5;
+  padding: .5rem .75rem;
+  border-radius: 0.5rem;
+  flex-direction: column;
+  font-family: "Poppins", sans-serif;
+}
+.request{
+  width: 100%;
+    min-height: 20px;
+    background-color: var(--color4);
+    border-radius: 0.25rem;
+    padding: .25rem .5rem;
+    text-align: right;
+    margin-bottom: .25rem;
+}
+.request .info{
+  font-size: .8em;
+    display: grid;
+    grid-template-columns: 3fr .5fr .5fr;
+}
+.hidden{
+  display: none;
 }
 
 @media only screen and (max-width: 430px) {
