--- a/styles/accounts.css
+++ b/styles/accounts.css
@@ -12,7 +12,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
   font-family: "Poppins", sans-serif;
   font-weight: 900;
   font-size: 2.5rem;
@@ -21,18 +21,24 @@
   color: var(--primary);
   padding: 0.5rem 1rem;
 }
-
+.header a{
+  text-decoration: none;
+  color: var(--primary);
+}
 .header .logo {
   width: 3rem;
+  height: 3rem;
   overflow: hidden;
 }
 .header .logo img {
-  object-fit: contain;
+  /* object-fit: contain; */
   width: 100%;
+  height: 100%;
 }
 
 .nav {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: baseline;
   width: 80%;
@@ -42,7 +48,9 @@
   font-weight: 400;
   color: var(--primary);
 }
-
+.nav h2{
+  text-wrap: nowrap;
+}
 .nav .info {
   display: flex;
   font-size: 0.85rem;
@@ -76,7 +84,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 0.5rem;
-  align-items: baseline;
+  align-items: center;
 }
 .entry label {
   font-family: "Poppins", sans-serif;
@@ -169,30 +177,28 @@ input:focus {
   border-radius: 0.5rem;
   padding: 0.35rem 0.65rem;
 }
-
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width:720px) {
   .header {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
+  .header .logo{
+    width: 2rem;
+    height: 2rem;
+  }
+  #entryForm {
+    width: 100%;
+    font-size: 1rem;
+  }
+}
+@media only screen and (max-width: 450px) {
   .nav {
     width: 100%;
-  }
-  .info {
-    flex-direction: column;
-  }
-  .info .name,
-  .info .email {
-    display: none;
   }
   .container {
     width: 100%;
     box-shadow: none;
     border-radius: 0;
     border: none;
-  }
-  #entryForm {
-    width: 100%;
-    font-size: 1rem;
   }
   .entry label {
     display: none;
@@ -202,5 +208,15 @@ input:focus {
   }
   #accountNumber {
     width: 100%;
+  }
+}
+
+@media only screen and (max-width: 360px){
+  .header{
+    font-size: 1.2rem;
+  }
+  .header .logo{
+    width: 1.5rem;
+    height: 1.5rem;
   }
 }
