--- a/styles/finance.css
+++ b/styles/finance.css
@@ -12,7 +12,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
   font-family: "Poppins", sans-serif;
   font-weight: 900;
   font-size: 2.5rem;
@@ -21,18 +21,24 @@
   color: var(--primary);
   padding: 0.5rem 1rem;
 }
-
+.header a{
+  text-decoration: none;
+  color: var(--primary);
+}
 .header .logo {
   width: 3rem;
+  height: 3rem;
   overflow: hidden;
 }
 .header .logo img {
-  object-fit: contain;
+  /* object-fit: contain; */
   width: 100%;
+  height: 100%;
 }
 
 .nav {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: baseline;
   width: 80%;
@@ -42,7 +48,9 @@
   font-weight: 400;
   color: var(--primary);
 }
-
+.nav h2{
+  text-wrap: nowrap;
+}
 .nav .info {
   display: flex;
   font-size: 0.85rem;
@@ -161,19 +169,24 @@ button:focus {
   border-radius: 0.5rem;
   padding: 0.35rem 0.65rem;
 }
-
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width:720px) {
   .header {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
+  .header .logo{
+    width: 2rem;
+    height: 2rem;
+  }
+}
+@media only screen and (max-width: 450px) {
   .nav {
     width: 100%;
+    flex-wrap: wrap;
   }
-  .info {
-    flex-direction: column;
+  .info .email{
+    font-size: .65rem;
   }
-  .info .name,
-  .info .email {
+  .info .date{
     display: none;
   }
   .container {
@@ -198,5 +211,15 @@ button:focus {
   #accountNumber {
     font-size: 0.75rem;
     padding: 0.35rem 0.1rem;
+  }
+}
+
+@media only screen and (max-width: 360px){
+  .header{
+    font-size: 1.2rem;
+  }
+  .header .logo{
+    width: 1.5rem;
+    height: 1.5rem;
   }
 }
