--- a/styles/finance.css
+++ b/styles/finance.css
@@ -57,9 +57,33 @@
   font-family: "Poppins", sans-serif;
   font-style: italic;
   color: var(--color3);
+  align-items: baseline;
+  padding: 0 .25rem;
+  border-radius: .25rem;
 }
-.nav .info div {
-  margin: 0 0.25rem;
+.info.focus{
+  border-bottom: 3px solid var(--primary);
+  box-shadow: 0 0 2px 2px var(--color3);
+}
+.nav .info .email{
+  display: flex;
+  flex-wrap: nowrap;
+}
+#user{
+  width: 1.5rem;
+  height: 1.5rem;
+  border: 3px solid transparent;
+  text-align: center;
+  border-radius: 50%;
+  margin-right: .15rem;
+  transition: all .3s ease;
+  cursor: pointer;
+  color: var(--primary);
+}
+#user:hover{
+  border: 3px solid var(--color3);
+  background-color: var(--color3);
+  color: white;
 }
 
 .container {
