--- a/styles/cfo.css
+++ b/styles/cfo.css
@@ -331,7 +331,36 @@
 .hidden {
   display: none;
 }
-
+.custom-popup {
+  background-color: #f5f5f5;
+  border-radius: 1rem;
+}
+.custom-title {
+  color: var(--primary);
+  font-size: 1.5em;
+}
+.custom-confirm-button {
+  background-color: var(--primary) !important;
+  color: white !important;
+  border: none !important;  
+  border-radius: 0.5rem !important;
+  padding: 0.35rem 0.65rem !important;
+}
+.custom-confirm-button:focus{
+  outline: none !important;
+  box-shadow: 0 0 2px 4px var(--color3) !important;
+}
+.custom-cancel-button{
+  background-color: #f5f5f5 !important;
+  color: var(--primary) !important;
+  border: 4px solid var(--primary) !important;
+  border-radius: 0.5rem !important;
+  padding: 0.35rem 0.65rem !important;
+}
+.custom-cancel-button:focus{
+  outline: none !important;
+  box-shadow: 0 0 2px 4px var(--color3) !important;
+}
 @media only screen and (max-width:720px) {
   html {
     font-size: 14px;
