--- a/styles/cfo.css
+++ b/styles/cfo.css
@@ -11,7 +11,22 @@
   --color3: #e9a7a9;
   --color4: #edd1d0;
 }
-
+.animation-container{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: hsla(0.8,69.4%,57.6%, 0.3);
+  backdrop-filter:  blur(10px);
+}
+.animation-container img{
+  height: 80%;
+  border-radius: 50%;
+}
 .header {
   display: flex;
   justify-content: space-between;
@@ -369,6 +384,10 @@
 }
 
 @media only screen and (max-width: 450px) {
+  .animation-container img{
+    height: auto;
+    width: 100%;
+  }
   .nav {
     width: 100%;
     font-size: 0.85rem;
