--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,41 @@
   --color3: #e9a7a9;
   --color4: #edd1d0;
 }
+.main-grid{
+  display: grid;
+  grid-template-areas: 
+  "accounts cfo"
+  "accounts cfo"
+  "finance cfo"
+  ;
+  grid-gap: .5rem;
+  background-color: #f5f5f5;
+  padding: 1rem;
+}
+#part1, #part2, #part3{
+  border-radius: 2rem;
+  transition: all 1s ease;
+  background-color: rgb(241, 238, 238);
+  resize: both;
+  padding: 1rem;
+  overflow: auto;
+  scrollbar-width: 0px;
+  
+}
+#part1:hover, #part2:hover, #part3:hover{
+  border-radius: .5rem;
+  background-color: white;
+  box-shadow: inset 0 0 4px 0 black;
+}
+#part1{
+  grid-area: finance;
+}
+#part2{
+  grid-area: accounts;
+}
+#part3{
+  grid-area: cfo;
+}
 .header {
   display: flex;
   justify-content: space-between;
@@ -35,23 +70,11 @@
   height: 100%;
 }
 .container {
-  width: 80%;
   margin: 1rem auto;
   padding: 1rem;
   border-radius: 1rem;
   box-shadow: 0 0 4px 4px var(--color3);
   max-width: 960px;
-}
-#loginForm {
-  display: flex;
-  flex-direction: column;
-  color: var(--primary);
-}
-.radio-grp {
-  display: flex;
-  flex-wrap: wrap;
-  grid-gap: 1rem;
-  padding: 0.5rem;
 }
 .custom-radio {
   display: none;
