--- a/styles/accounts.css
+++ b/styles/accounts.css
@@ -100,15 +100,15 @@
   text-wrap: nowrap;
 }
 .container {
-  margin: auto;
-  /* border: 6px solid var(--primary); */
   display: flex;
   border-radius: 2rem;
   padding: 1rem;
   flex-direction: column;
   align-items: center;
 }
-
+#entryForm{
+  width: 100%;
+}
 .entry {
   display: flex;
   justify-content: space-between;
@@ -149,8 +149,8 @@ input[type="number"]::-webkit-inner-spin-button {
   border: 2px solid var(--primary);
   padding: 0.25rem 0.5rem;
   border-radius: 1.5rem;
-  background-color: white;
   font-size: 1rem;
+  letter-spacing: 0;
 }
 input:focus {
   outline: none;
